--- a/static/styles.css
+++ b/static/styles.css
@@ -1,37 +1,48 @@
-/* Add your styles here. E.g., */
-textarea {
-    width: 85%;
-    height: 100px;
-}
-
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
+    margin: 2rem;
+    padding: 1rem;
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
     justify-content: center;
     height: 100vh;
 }
 
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1rem;
+}
 .container {
     background-color: #fff;
-    padding: 30px;
+    padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 600px;
+    width: 95%;
+    max-width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 select, button, textarea {
-    width: 100%;
-    padding: 10px 15px;
-    margin-bottom: 10px;
+    flex: 1;
+    padding: 4px 8px;
+    margin: 4px;
     border-radius: 4px;
     border: 1px solid #ccc;
-    font-size: 16px;
+    font-size: 14px;
+    max-width: 15.625rem;
+    box-sizing: border-box; 
+}
+
+
+select {
+    max-width: 250px;
+    max-height: 35px;
 }
 
 button {
@@ -46,6 +57,22 @@ button:hover {
 }
 
 textarea {
-    height: 150px;
+    height: 50px;
     resize: none;
+    flex-basis: 100%; /* This ensures the textarea takes the full width */
+    max-width: 500px
+}
+
+/* Media Queries for Mobile Layout */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        padding: 15px;
+    }
+
+    select, button, textarea {
+        flex-basis: auto; /* Resetting the flex basis for mobile */
+        width: 100%;
+        margin: 6px 0;
+    }
 }
