--- a/templates/index.html
+++ b/templates/index.html
@@ -146,8 +146,7 @@
             <option value="135mm">135mm Lens</option>
         </select>
         <h2>F Stop</h2>
-        <select id="f_stop"></select>
-        <select>
+        <select id="f_stop">
             <option value=""></option>
             <option value="f/1.4">f/1.4</option>
             <option value="f/2">f/2</option>
@@ -162,8 +161,7 @@
         </select>
 
         <h2>Filters and Effects 1</h2>
-        <select id="filters_and_effects_1"></select>
-        <select>
+        <select id="filters_and_effects_1">
             <option value=""></option>
             <option value="hologram effect">hologram effect</option>
             <option value="infrared filter">infrared filter</option>
@@ -179,8 +177,7 @@
             <option value="vignette">vignette</option>
         </select>
         <h2>Filters and Effects 2</h2>
-        <select id="filters_and_effects_2"></select>
-        <select>
+        <select id="filters_and_effects_2">
             <option value=""></option>
             <option value="hologram effect">hologram effect</option>
             <option value="infrared filter">infrared filter</option>
@@ -197,8 +194,7 @@
 
         </select>
         <h2>Filters and Effects 3</h2>
-        <select id="filters_and_effects_3"></select>
-        <select>
+        <select id="filters_and_effects_3">
             <option value=""></option>
             <option value="hologram effect">hologram effect</option>
             <option value="infrared filter">infrared filter</option>
