--- a/static/styles.css
+++ b/static/styles.css
@@ -2,20 +2,32 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #e9ecef;
+    background-color: #041d35;
 }
 
 .container {
-    background-color: #fff;
+    background-color: #0a1b70;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-    color: #333;
+h1 {
+    color: #ffffff;
     margin-bottom: 15px;
     font-size: 16px;
+}
+
+h2 {
+    color: #ffffff;
+    margin-bottom: 15px;
+    font-size: 16px;
+}
+
+p {
+    color: #ffffff;
+    margin-bottom: 15px;
+    
 }
 
 .form-control {
@@ -35,6 +47,16 @@ h2 {
     background-color: #007bff;
     border-color: #007bff;
     padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.btn-secondary {
+    background-color: #f0600d;
+    border-color: #f0600d;
+    padding: 10px 20px;
+    margin-top: 1em;
     font-size: 16px;
     border-radius: 5px;
     transition: background-color 0.3s, border-color 0.3s;
